O butão esta a funcionar em todas as pags

--- a/Estagio_Test-001-main/urlscanner/spanish.html
+++ b/Estagio_Test-001-main/urlscanner/spanish.html
@@ -30,7 +30,7 @@
                         <!-- Email address input-->
                         <div class="row input-group-newsletter">
                             <div class="col"><input class="form-control" type="text" id="URL" placeholder="Enter URL link..." ></div>
-                            <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div>
+                            <div class="col-auto"><button class="btn btn-primary" id="submitButton" type="submit">Notify Me!</button></div>
                         </div>
                         
 <!-- codoigo original do input
