tradução da página inicial

--- a/english.html
+++ b/english.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Coming Soon - Start Bootstrap Theme</title>
+        <title>Internship Project</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -31,19 +31,6 @@
                         <div class="row input-group-newsletter">
                             <div class="col"><input class="form-control" type="text" id="URL" placeholder="Enter the URL" ></div>
                             <div class="col-auto"><button class="btn btn-primary" id="submitButton" type="submit">Check</button></div>
-                        </div>
-
-<!-- codoigo original do input
-
-                        <form id="FORM" method="get">
-            <input type="text" id="URL">
-            <input type="submit" value="Submit">
-        </form> <br>  <br>
-
-        -->
-
-                        <div class="d-none" id="submitSuccessMessage">
-                            
                         </div>
                     </form>
                 </div>
